fix switch alignment

--- a/styles/settings.module.scss
+++ b/styles/settings.module.scss
@@ -16,6 +16,12 @@
 
     ul {
         width: 90%;
+        display: flex;
+        flex-direction: column;
+        align-content: space-between;
+        justify-content: space-evenly;
+        align-items: stretch;
+        padding: 0;
     }
 
     li {
@@ -23,6 +29,7 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
+        align-content: center;
         list-style-type: none;
     }
 
@@ -32,6 +39,6 @@
     }
 
     .switch {
-        transform: scale(2.5);
+        transform: translate(-70%) scale(2.5);
     }
 }
